--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     </div>
                     <div class="col-md-6 d-none d-md-block">
                         <div class="hero-image-box text-center">
-                            <img src="assets/img/hero/my-380.JPG" alt="" />
+                            <img src="assets/img/hero/my-1.jpg" alt="" />
                         </div>
                     </div>
                 </div>
