--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                             </div>
                             <div class="portfolio-item website">
                                 <div class="image-box">
-                                    <img src="assets/img/portfolio/website/04-de-image.png" alt="" />
+                                    <img src="assets/img/portfolio/website/03-chhb-thumb.jpg" alt="" />
                                 </div>
                                 <a href="https://di-lella.ch/en/" target="_blank" class="content-box">
                                     <h3 class="portfolio-title">Dilella Restaurant</h3>
