--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                             </div>
                             <div class="portfolio-item website">
                                 <div class="image-box">
-                                    <img src="assets/img/portfolio/Website/03-chhb-thumb.jpg" alt="" />
+                                    <img src="assets/img/portfolio/Website/04-de-image.png" alt="" />
                                 </div>
                                 <a href="https://childrensharbor.org/" target="_blank" class="content-box">
                                     <h3 class="portfolio-title">Childrens Harbor</h3>
