--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <section class="hero-section d-flex align-items-center" id="intro">
             <div class="intro_text">
                 <svg viewBox="0 0 1320 300">
-               <text x="50%" Y="50%" text-anchor="middle">HELLO</text>
+               <text x="50%" y="50%" text-anchor="middle">HELLO</text>
             </svg>
             </div>
             <div class="container">
@@ -193,7 +193,7 @@
                                 <div class="image-box">
                                     <img src="assets/img/portfolio/Website/04-de-image.png" alt="" />
                                 </div>
-                                <a href="https://childrensharbor.org/" target="_blank" class="content-box">
+                                <a href="https://di-lella.ch/en/" target="_blank" class="content-box">
                                     <h3 class="portfolio-title">Dilella Restaurant</h3>
                                     <i class="flaticon-up-right-arrow"></i>
                                 </a>
@@ -222,71 +222,63 @@
                                 </div>
                                 <a href="#" target="_blank" class="content-box">
                                     <h3 class="portfolio-title">Airframe Assembly</h3>
-
                                 </a>
                             </div>
                             <div class="portfolio-item admin">
                                 <div class="image-box">
                                     <img src="assets/img/portfolio/Logo/Sky-t-bar.jpg" alt="" />
                                 </div>
-                                <a href="https://arthpatel11.github.io/hms/superadmin/" target="_blank" class="content-box">
+                                <div class="content-box">
                                     <h3 class="portfolio-title">Sky T Bar</h3>
-
-                                </a>
+                                </div>
                             </div>
                             <div class="portfolio-item admin">
                                 <div class="image-box">
                                     <img src="assets/img/portfolio/Logo/Single-Point.jpg" alt="" />
                                 </div>
-                                <a href="#" target="_blank" class="content-box">
+                                <div class="content-box">
                                     <h3 class="portfolio-title">Single Point</h3>
-
-                                </a>
+                                </div>
                             </div>
                             <div class="portfolio-item admin">
                                 <div class="image-box">
                                     <img src="assets/img/portfolio/Logo/A90-Football.jpg" alt="" />
                                 </div>
-                                <a href="https://arthpatel11.github.io/tmp/" target="_blank" class="content-box">
+                                <div class="content-box">
                                     <h3 class="portfolio-title">A 90 Football</h3>
-
-                                </a>
+                                </div>
                             </div>
                             <div class="portfolio-item figma">
                                 <div class="image-box">
                                     <img src="assets/img/portfolio/Social-Ads/ILS_148.png" alt="" />
                                 </div>
-                                <a href="#" target="_blank" class="content-box">
+                                <div class="content-box">
                                     <h3 class="portfolio-title">Insurance Leads Store</h3>
-
-                                </a>
+                                </div>
                             </div>
                             <div class="portfolio-item figma">
                                 <div class="image-box">
                                     <img src="assets/img/portfolio/Social-Ads/Carousel-2_03.png" alt="" />
                                 </div>
-                                <a href="#" target="_blank" class="content-box">
+                                <div class="content-box">
                                     <h3 class="portfolio-title">Consumer Coverage</h3>
-
-                                </a>
+                                </div>
                             </div>
                             <div class="portfolio-item figma">
                                 <div class="image-box">
                                     <img src="assets/img/portfolio/Social-Ads/Time_128.png" alt="" />
                                 </div>
-                                <a href="#" target="_blank" class="content-box">
-                                    <h3 class="portfolio-title">Time & Gold</h3>
-
-                                </a>
+                                <div class="content-box">
+                                    <h3 class="portfolio-title">Time &amp; Gold</h3>
+                                </div>
                             </div>
                             <div class="portfolio-item figma">
                                 <div class="image-box">
                                     <img src="assets/img/portfolio/Social-Ads/Webmyne_22-02-2.png" alt="" />
                                 </div>
-                                <a href="#" target="_blank" class="content-box">
+                                <div class="content-box">
                                     <h3 class="portfolio-title">Webmyne Systems</h3>
-
-                                </a>
+                                </div>
                             </div>
                             <div class="portfolio-item logo">
                                 <div class="image-box">
@@ -348,7 +340,7 @@
                         <div class="resume-widget">
                             <div class="resume-item wow fadeInLeft" data-wow-delay=".4s">
                                 <div class="time">July 2021 - Present</div>
-                                <h3 class="resume-title">UI/UX Designer & Graphic Designer</h3>
+                                <h3 class="resume-title">UI/UX Designer &amp; Graphic Designer</h3>
                                 <div class="institute">Webmyne Systems Pvt. Ltd.</div>
                             </div>
                             <div class="resume-item wow fadeInLeft" data-wow-delay=".5s">
