--- a/index.html
+++ b/index.html
@@ -220,9 +220,9 @@
                                 <div class="image-box">
                                     <img src="assets/img/portfolio/Logo/Airframe-assembly.jpg" alt="" />
                                 </div>
-                                <a href="#" target="_blank" class="content-box">
+                                <div class="content-box">
                                     <h3 class="portfolio-title">Airframe Assembly</h3>
-                                </a>
+                                </div>
                             </div>
                             <div class="portfolio-item admin">
                                 <div class="image-box">
